webroot/revenant/css/main.css
/*TEST EDIT*/
.text--edit {
  padding: .3rem;
  border-radius: 1rem;
  border: 1px solid rgba(81, 203, 238, 1);
  -webkit-transition : border 500ms ease-out;
  -moz-transition : border 500ms ease-out;
  -o-transition : border 500ms ease-out;
  transition : border 500ms ease-out;
}

.text--edit:hover {
  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
  border: 1px solid rgba(81, 203, 238, 1);
  border-radius: 1rem;
  cursor: pointer;
}

/*LOGIN*/

.rev_login {
  text-align: right;
}

.rev_login__contaier {
  height: 1px;
  opacity: 0;
  -webkit-transition: all .7s;
  -moz-transition: all .7s;
  -o-transition: all .7s;
  transition: all .7s;
}

.show {
  height: 15rem;
  opacity: 1;
}

/* LOADING SPINNER */
#spinner-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: .9;
  background-color: #fff;
}

